[project]
name = "gwdg-tools"
version = "0.1.0"
description = "CLI to probe the GWDG Chat-AI (OpenAI-compatible) API: live model catalog, latency and health/availability, with auto-refreshed Markdown reports."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "tzdata>=2026.2",
]

[project.scripts]
gwdg = "gwdg_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gwdg_tools"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
